--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,45 @@
-altgraph==0.17.2
+aiohttp==3.8.5
+aiosignal==1.3.1
+api==0.0.7
+async-timeout==4.0.3
+attrs==23.1.0
+beautifulsoup4==4.12.2
 blinker==1.6.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
 click==8.1.6
+contourpy==1.1.0
+cycler==0.11.0
 Flask==2.3.2
-future==0.18.2
+fonttools==4.42.0
+frozenlist==1.4.0
 gunicorn==21.2.0
+idna==3.4
 importlib-metadata==6.8.0
+importlib-resources==6.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
-macholib==1.15.2
+keepa==1.3.6
+kiwisolver==1.4.4
 MarkupSafe==2.1.3
+matplotlib==3.7.2
+multidict==6.0.4
+nose==1.3.7
+numpy==1.25.2
 packaging==23.1
-six==1.15.0
+pandas==2.0.3
+Pillow==10.0.0
+plotly==5.16.1
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2023.3
+requests==2.31.0
+six==1.16.0
+soupsieve==2.4.1
+tenacity==8.2.3
+tqdm==4.66.1
+tzdata==2023.3
+urllib3==2.0.4
 Werkzeug==2.3.6
+yarl==1.9.2
 zipp==3.16.2
